fix: header and navigation overlap.

--- a/src/components/react/WithGlobalNavigation.module.css
+++ b/src/components/react/WithGlobalNavigation.module.css
@@ -12,7 +12,7 @@
     position: fixed;
     top: 0;
     left: 0;
-    z-index: 100;
+    z-index: 20000;
     display: none;
     height: 100vh;
     height: 100dvh;
